# week2

./: README.md  pyproject.toml
lectures/Week01/: week01_lecture.ipynb
lectures/Week02/: week02_lecture.ipynb
