[tool.poetry]
name = "mds"
version = "0.1.0"
description = "QNSS Modern Data Structures (Fall 2020)"
authors = ["Thomas Brambor <Thomas.Brambor@columbia.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"
numpy = "^1.19.1"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
matplotlib = "^3.3.1"
plotly = "^4.9.0"
seaborn = "^0.10.1"
boto3 = "^1.14.56"
rise = "^5.6.1"
jupyter_contrib_nbextensions = "^0.5.1"
jupyter-kite = "^1.0.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
